[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/player/Cagliostro.gd" type="Script" id=1]
[ext_resource path="res://scenes/HUD1.gd" type="Script" id=2]
[ext_resource path="res://scenes/CamMouse.gd" type="Script" id=3]
[ext_resource path="res://scenes/FreeNav.gd" type="Script" id=4]
[ext_resource path="res://entities/tiles/Autumn.tres" type="TileSet" id=5]
[ext_resource path="res://entities/player/Cagliostro.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.294118 )

[node name="Dungeon" type="Node2D"]
script = ExtResource( 4 )

[node name="FreeNav" type="Navigation2D" parent="."]

[node name="Layout" type="TileMap" parent="FreeNav"]
z_index = 1
mode = 1
tile_set = ExtResource( 5 )
cell_size = Vector2( 128, 64 )
cell_tile_origin = 1
centered_textures = true
format = 1
tile_data = PoolIntArray( -327674, 8, 0, -327673, 8, 0, -327672, 8, 0, -327671, 8, 0, -327670, 8, 0, -327669, 8, 0, -327668, 8, 0, -327667, 8, 0, -327666, 8, 0, -327665, 8, 0, -327664, 8, 0, -262138, 8, 0, -262137, 8, 0, -262136, 8, 0, -262135, 8, 0, -262134, 8, 0, -262133, 8, 0, -262132, 8, 0, -262131, 8, 0, -262130, 8, 0, -262129, 8, 0, -262128, 8, 0, -196602, 8, 0, -196601, 8, 0, -196600, 8, 0, -196599, 8, 0, -196598, 8, 0, -196597, 8, 0, -196596, 8, 0, -196595, 8, 0, -196594, 8, 0, -196593, 8, 0, -196592, 8, 0, -131066, 8, 0, -131065, 8, 0, -131064, 8, 0, -131063, 8, 0, -131062, 8, 0, -131061, 8, 0, -131060, 8, 0, -131059, 8, 0, -131058, 8, 0, -131057, 8, 0, -131056, 8, 0, -65530, 8, 0, -65529, 8, 0, -65528, 8, 0, -65527, 8, 0, -65526, 8, 0, -65525, 8, 0, -65524, 8, 0, -65523, 8, 0, -65522, 8, 0, -65521, 8, 0, -65520, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 8, 0, 13, 8, 0, 14, 8, 0, 15, 8, 0, 16, 8, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 8, 0, 65548, 8, 0, 65549, 8, 0, 65550, 8, 0, 65551, 8, 0, 65552, 8, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 8, 0, 131082, 8, 0, 131083, 8, 0, 131084, 8, 0, 131085, 8, 0, 131086, 8, 0, 131087, 8, 0, 131088, 8, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 8, 0, 196618, 8, 0, 196619, 8, 0, 196620, 8, 0, 196621, 8, 0, 196622, 8, 0, 196623, 8, 0, 196624, 8, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 8, 0, 262154, 8, 0, 262155, 8, 0, 262156, 8, 0, 262157, 8, 0, 262158, 8, 0, 262159, 8, 0, 262160, 8, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 8, 0, 327690, 8, 0, 327691, 8, 0, 327692, 8, 0, 327693, 8, 0, 327694, 8, 0, 327695, 8, 0, 327696, 8, 0 )

[node name="CamStatic" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="CamMouse" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource( 3 )

[node name="Cagliostro" parent="." instance=ExtResource( 6 )]
position = Vector2( 768, 352 )
z_index = 2
script = ExtResource( 1 )

[node name="CamFollow" type="Camera2D" parent="Cagliostro"]
anchor_mode = 0

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="XY" type="Panel" parent="HUD"]
margin_right = 256.0
margin_bottom = 160.0
custom_styles/panel = SubResource( 1 )

[node name="Mouse" type="Label" parent="HUD/XY"]
margin_left = 16.0
margin_top = 16.0
margin_right = 176.0
margin_bottom = 48.0
text = "Mouse:"
valign = 1

[node name="Player" type="Label" parent="HUD/XY"]
margin_left = 16.0
margin_top = 48.0
margin_right = 176.0
margin_bottom = 80.0
text = "Player:"
valign = 1

[node name="Cam" type="Label" parent="HUD/XY"]
margin_left = 16.0
margin_top = 80.0
margin_right = 144.0
margin_bottom = 112.0
text = "Cam:"
valign = 1

[node name="MoveLine" type="Line2D" parent="."]
z_index = 1

[node name="MoveRange" type="Polygon2D" parent="."]
z_index = 1
color = Color( 0.670588, 0, 0, 0.580392 )

[connection signal="item_rect_changed" from="Cagliostro" to="Cagliostro" method="_on_Player_item_rect_changed"]
